--- a/day1/05_mutex/CMakeLists.txt
+++ b/day1/05_mutex/CMakeLists.txt
@@ -5,4 +5,4 @@ get_filename_component (VAR ${CMAKE_CURRENT_LIST_DIR} NAME)
 project( ${VAR}  )
 add_executable( ${VAR}  ${src_files} )
 target_link_libraries( ${VAR} stdc++ pthread)
-add_definitions("-std=c++11 -ggdb")
+add_definitions(" -ggdb")
